--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -25,7 +25,7 @@
   max-width: 250px;
 }
 
-.userbar .avatar {
+.user-card .avatar {
   height: 100%;
   width: 100%;
   max-width: 120px;
